# mlir-example

./: CMakeLists.txt  README.md  exec_build.sh
include/: CMakeLists.txt
include/Dialect/: CMakeLists.txt  JaysonDialect.td  Ops.td
include/Pass/: CMakeLists.txt  custom.td  custom_pass.td
lib/Pass/: CMakeLists.txt  customPasses.cpp
